# market-mind

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
analysis/: superstore_validation.py
config/scenarios/: brand_differentiation.yaml  information_asymmetry.yaml  pure_price_war.yaml
docker/: Dockerfile
experiments/: llm_smoke_test.py  llm_vs_rules_final.py
scripts/: pre_commit_check.py
src/: environment.py  simulation.py  visualization.py
src/agents/: __init__.py  base.py  llm_agent.py  rule_based.py
tests/: test_agents.py  test_environment.py  test_llm_agent.py
