[project]
name = "market-mind"
version = "0.1.0"
description = "Market simulation agent project"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.11"
dependencies = [
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "structlog (>=26.1.0,<27.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "streamlit (>=1.58.0,<2.0.0)",
    "tenacity (>=9.1.4,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[tool.poetry]
packages = [{include = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)"
]
